# clang-var-bkOfGitee

./: .gitignore  CMakeLists.txt  README.md  build.sh  build__runtime_c.sh  build__runtime_c__TmPnt_ThreadLocal.sh  work_list.md
TestAlone/: CMakeLists.txt  TestAloneMain.cpp
VarAlone/: CMakeLists.txt  VarMain.cpp
VarPlugin/: CMakeLists.txt
app/openjdk-24-0/: CompileJvm.gmk.patch  build__using__cmd_wrap.sh  build_raw.sh  patch_allow__cxx_delete_func.sh  readme.md
bug/2024-0613-Release/: readme.md
bug/20240612_17--openjdk-24-0/: human_watch_runtimeFnCall.gdb_script.sh  readme.md
include/Brc/: BrcVst.h  CollectIncMacro_PPCb.h
include/Var/: ClConst.h  Common.h  Constant.h  FnVst.h  RetVst.h  (+5 more)
runtime_c__TmPnt_ThreadLocal/: CMakeLists.txt  TestMain_C.c  TestMain_CXX.cpp  TestMain_CXX_LinkStaticArch.cpp  rntm_c__TmPnt_ThrLcl.c  sleuthkit-4.12.1__-fPIC__libclangPlgVar_runtime_c_TmPnt_ThrLcl.a.sh
runtime_c__vars_fn/: CMakeLists.txt  TestMain_C.c  runtime_c__vars_fn.c
runtime_cpp__vars_fn/: CMakeLists.txt  TestMain_Cpp.cpp  fridaHelper.cpp  runtime_cpp__vars_fn.cpp
test_in/: CMakeLists.txt  MyClz.h  lambda__demo.cpp  lambda__demo.cpp.ast-dump.syntax-only.txt  readme.md  syntax_tree_gen.sh  test_main.cpp  test_main.cpp.syntax_tree.txt  typedef__demo.cpp  typedef__demo.cpp.ast-dump.syntax-only.txt  typedef__lambda__demo.cpp  typedef__lambda__demo__marcoType.cpp  typedef__lambda__demo__marcoType.cpp.ast-dump.syntax-only.txt
test_in/ast-dump.syntax-only/: MyClz.cpp.syntax_tree.txt  test_main.cpp.syntax_tree.txt  typedef__lambda__demo__marcoType.cpp.syntax_tree.txt
(+14 files in other folders)
